<resources>
    <string name="app_name">Galmanhani</string>

    <string name="button_label">Scan</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_add_host_dialog">AddHostDialog</string>
    <string name="add_label">Add</string>
    <string name="block_label">Block</string>
    <string name="add_hint">Host Name</string>
    <string name="title_activity_host_density_dialog">HostDensityDialog</string>
    <string name="low_label">Low</string>
    <string name="middle_label">Middle</string>
    <string name="high_label">High</string>
    <string name="refresh_label">Refresh</string>
    <string name="default_label">default</string>
    <string name="title_activity_host_detail">HostDetailActivity</string>
    <string name="temp_string">temp string</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="allow_label">Allow</string>
    <string name="scan_label">Scan Now</string>
    <string name="action_refresh">Refresh</string>
</resources>
