<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin" tools:context="me.skywave.helloapplication.front.dialog.HostEditDialog">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view"
        android:layout_centerHorizontal="true"/>

    <EditText android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_field"
        android:hint="@string/add_hint"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_view" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_field"
        android:gravity="center_vertical|center_horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allow_label"
            android:id="@+id/allow_button" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/block_label"
            android:id="@+id/block_button" />
    </LinearLayout>


</RelativeLayout>
